k8s/cert-manager/sample.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-hostname
spec:
  selector:
    matchLabels:
      app: my-hostname
  replicas: 1
  template:
    metadata:
      labels:
        app: my-hostname
    spec:
      containers:
      - image: h0n9/go-my-hostname:0.0.2
        imagePullPolicy: IfNotPresent
        name: my-hostname
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: my-hostname
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP 
  selector:
    app: my-hostname
